# turingMachine

./: AlphabetStateLine.cpp  AlphabetStateLine.h  AlphabetStateLineDialog.cpp  AlphabetStateLineDialog.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  TapeLetterDialog.cpp  TapeLetterDialog.h  TuringMachine.cpp  TuringMachine.h  ValidatorAlphabet.cpp  ValidatorAlphabet.h  main.cpp  readme.md
